--- a/www/config.json
+++ b/www/config.json
@@ -1,8 +1,8 @@
 {
-    "app_id" : "calc.com",
-    "appname": "Moodle Mobile",
-    "versioncode" : "2017",
-    "versionname" : "Project Trege",
+    "app_id" : "com.caasi.myapplication",
+    "appname": "Trege",
+    "versioncode" : "1.0",
+    "versionname" : "1.0",
     "cache_expiration_time" : 300000,
     "default_lang" : "en",
     "languages": {"ar": "عربي", "bg": "Български", "ca": "Català", "cs": "Čeština", "da": "Dansk", "de": "Deutsch","en": "English", "es": "Español", "es-mx": "Español - México", "eu": "Euskara", "fa": "فارسی", "fr" : "Français", "he" : "עברית", "hu": "magyar", "it": "Italiano", "ja": "日本語","nl": "Nederlands", "pl": "Polski", "pt-br": "Português - Brasil", "pt": "Português - Portugal", "ro": "Română", "ru": "Русский", "sv": "Svenska", "tr" : "Türkçe", "zh-cn" : "简体中文", "zh-tw" : "正體中文"},
